hphp/test/vm/unused_clscns.php.expectf
HipHop Fatal error: Class undefined: Foo in %s on line 2
